# idasen-tray-controller

./: README.md  package.json
src/: AboutPage.tsx  ManagePositionsPage.tsx  NewPositionPage.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: config_utils.rs  main.rs
