[package]
name = "trayasen"
version = "0.1.0"
description = "An app to control IKEA Idasen desk"
authors = ["Szymon Wiszczuk<szymon.wiszczuk@gmail.com>"]
license = "MIT"
repository = "https://github.com/golota60/trayasen"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.0"

serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
btleplug = "0.11.3"
tokio = { version = "1.35.0", features = ["full"] }
thiserror = "1.0.50"
uuid = "1.6.1"
tauri-plugin-autostart = "2.0.0-beta"
window-shadows = "0.2.2"
tauri-plugin-process = "2.0.0-beta.4"
# To be used instead of tauri directories, since we do not always have the context of the `app`, which tauri requires in the v2 API.
dirs-next = "2.0.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
